0.5.1
--------------------------------------------------------
- BUG修复模块
  * 修正 util/ajax/rest 无法发送 null 的问题

0.5.0   (2018-06-22)
--------------------------------------------------------
- BUG修复模块
  * 修正 util/cache/list 模块 GC 异常
  * 修正 util/template/trimpath 重复引入异常

0.4.9   (2018-04-12)
--------------------------------------------------------
- 功能支持
  * 支持 res 依赖插件注入地址

0.4.7   (2018-04-12)
--------------------------------------------------------
- BUG修复模块
  * base/util 模块的 _$absolute 接口支持相对协议
  * util/timer/animation 的 requestAnimationFrame 接口返回标识

0.4.6   (2017-11-09)
--------------------------------------------------------
- BUG修复模块
  * base/util 模块的 _$url2origin 接口支持相对协议
  * util/ajax/loader/text 修正 XHR 重复加载文本内容时被缓存问题

0.4.5   (2017-09-14)
--------------------------------------------------------
- 功能支持
  * util/ajax/tag 模块增加 _$loadTemplate 接口需要跨域载入的时候采用 ajax 先加载文本再解析内容

- 功能变化
  * util/ajax/tag 模块 _$loadHtml 接口回退不支持跨域载入

0.4.4   (2017-09-12)
--------------------------------------------------------
- 功能支持
  * util/dispatcher/dispatcher 增加根据别名取模块 UMI 接口 _$getUMIByAlias
  * util/cursor/cursor 增加 _$lineno 支持获取当前光标所在的行
  * util/template/tpl _$parseTemplate 支持 type 为 nej/* 的 script 标签解析

- 功能变化
  * util/cache/list _$addItem 接口支持批量添加列表项
  * util/ajax/tag 模块 _$loadHtml 接口需要跨域载入的时候采用 ajax 先加载文本再解析内容
  * NEJ.define 处理过程忽略 NEJ 模板封装脚本，即 type="nej/*" 的 script 标签

0.4.3   (2017-06-26)
--------------------------------------------------------
- 功能支持
  * 添加消息总线机制

0.4.2   (2017-06-05)
--------------------------------------------------------
- 功能变化
  * util/ajax/rest 支持从输入的data中解析地址上的rest变量
  * util/ajax/rest 支持 :PARAM 的地址变量格式
  * util/cache/abstract 支持在 __doSendRequest 的hook接口中传入当前请求key
  * base/element getChildren接口兼容IOS8的XML DOM


0.4.1   (2017-06-01)
--------------------------------------------------------
- 功能变化
  * bower 安装时忽略 test,doc,res,demo 目录

0.4.0   (2017-04-10)
--------------------------------------------------------
- 功能支持
  * 列表删除cache中回传服务器返回的结果

- BUG修复模块