@@ -1,7 +1,8 @@
 0.5.1
 --------------------------------------------------------
 - BUG修复模块
-  * 修正 util/ajax/rest 无法发送 null 的问题
+  * 修正 util/ajax/rest 无法发送 null 数据的问题
+  * 修正 util/animation/animation 在 safari12 中当前时间异常 bug
 
 0.5.0   (2018-06-22)
 --------------------------------------------------------
